force-app/main/default/objects/Consultant__c/fields/Role_in_Project__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Project__c</fullName>
    <label>Role in Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_in_Project</valueSetName>
    </valueSet>
</CustomField>