force-app/main/default/objects/Consultant__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>start Date when employee is assigned the project</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>